Unconnected node group vector inputs map [X,Y,Z] to [Y,Z,-] #62305

Closed
opened 2019-03-07 11:57:44 +01:00 by Bjørnar Frøyse · 9 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GTX 770

Blender Version
Broken: 2.80, 18e5540a48, 2019-03-06, 00:18 (latest from builder as of march 7)
Also broken in earlier 2.80 versions.
Worked: 2.79 release

Short description of error
On node groups, vector inputs with no node connected are mapped wrong / give wrong output.
X -> Y
Y -> Z
Z -> Nothing

Exact steps for others to reproduce the error

New file
New material
Create a vector mapping node
Make a group out of that node with Ctrl+G
Inside the group, make sure that the input vector is connected to the output (can go via other nodes)
Outside of the group, disconnect any inputs, leaving an unconnected vector input
Set the value of this default vector, directly on the node group node, to (1,1,1)
Connect the node group output to an emission node and connect that to the material output

Expected: White (1,1,1)
Result: Cyan (1,1,0)

**System Information** Operating system: Windows 10 Graphics card: Nvidia GTX 770 **Blender Version** Broken: 2.80, 18e5540a48b6, 2019-03-06, 00:18 (latest from builder as of march 7) Also broken in earlier 2.80 versions. Worked: 2.79 release **Short description of error** On node groups, vector inputs with no node connected are mapped wrong / give wrong output. X -> Y Y -> Z Z -> Nothing **Exact steps for others to reproduce the error** New file New material Create a vector mapping node Make a group out of that node with Ctrl+G Inside the group, make sure that the input vector is connected to the output (can go via other nodes) Outside of the group, disconnect any inputs, leaving an unconnected vector input Set the value of this default vector, directly on the node group node, to (1,1,1) Connect the node group output to an emission node and connect that to the material output Expected: White (1,1,1) Result: Cyan (1,1,0)

Added subscriber: @BjornarFroyse

Added subscriber: @BjornarFroyse
Bjørnar Frøyse changed title from Unconnected node group vector inputs map [X,Y,Z] to [Z,X,-] to Unconnected node group vector inputs map [X,Y,Z] to [Y,Z,-] 2019-03-07 12:00:28 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this on my end. I guess that my setup is correct?
vector_group.blend

I can not reproduce this on my end. I guess that my setup is correct? [vector_group.blend](https://archive.blender.org/developer/F6778931/vector_group.blend)

In #62305#634387, @ZedDB wrote:
I can not reproduce this on my end. I guess that my setup is correct?
vector_group.blend

Not quite; you need to go inside the node group and make sure the input vector is connected to something.

> In #62305#634387, @ZedDB wrote: > I can not reproduce this on my end. I guess that my setup is correct? > [vector_group.blend](https://archive.blender.org/developer/F6778931/vector_group.blend) Not quite; you need to go inside the node group and make sure the input vector is connected to something.
Here's a file. [Bug_NodeGroupVectorInput.blend](https://archive.blender.org/developer/F6779075/Bug_NodeGroupVectorInput.blend)
Clément Foucault was assigned by Sebastian Parborg 2019-03-07 13:46:54 +01:00

This works with cycles so I'm guessing this is a eevee bug.

This works with cycles so I'm guessing this is a eevee bug.
Clément Foucault was unassigned by Jacques Lucke 2019-03-07 17:37:11 +01:00
Jacques Lucke self-assigned this 2019-03-07 17:37:11 +01:00
Member

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by b38b0cdb0d

This issue was referenced by b38b0cdb0dc3604c3ec2d7627897ba595de44646
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62305
No description provided.